--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+    />
     <title>STYEL</title>
   </head>
   <body>
