--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
     <meta name="theme-color" content="#000000" />
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <link
